--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "babel-preset-react": "^6.24.1",
     "css-minimizer-webpack-plugin": "^1.1.5",
     "jest": "^26.6.3",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-test-renderer": "^17.0.1",
+    "use-error-boundary": "^2.0.4",
     "webpack-merge": "^5.4.0"
   },
   "devDependencies": {
